@@ -2,6 +2,12 @@
 
 	* pycvsanaly2/extensions/Metrics.py:
 
+	Do not call get_path_for_revision() with CVS repos.
+	
+2008-09-02  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>
+
+	* pycvsanaly2/extensions/Metrics.py:
+
 	Ignore directories.
 	
 2008-09-02  Carlos Garcia Campos  <carlosgc@gsyc.escet.urjc.es>
